<resources>
    <!--Экран первоначальной настройки-->
    <string name="app_name">Drink Water!</string>
    <string name="step_1">Step 1/2\nEnter your weight</string>
    <string name="step_2">Step 2/2\nCreate your profile</string>
    <string name="first_setup_title">Configure your app</string>
    <string name="weight_enter">Weight</string>
    <string name="weight_description">Собака сьела сосиску. sectetur adipiscing elit. Vivamus eleifend neque et po eros viverra venenatis. Sed fringilla sem non sem feugiat, eget lacinia ipsum tempor</string>
    <string name="change_settings_notification">Weight can be changed in settings</string>

    <!--Описание приложения-->
    <string name="about_title">About</string>
    <string name="about_text">about text</string>


    <!--Меню-->
    <string name="exit">Exit</string>
    <string name="stats">Stats</string>

    <!--Главный экран-->
    <string name="goal">Your goal on today: </string>
    <string name="cup_select">Chose your cup</string>
    <string name="drinking_accept">Accept drink</string>
    <string name="cup_add_new">Add new cup</string>
    <string name="next_button">Next</string>
    <string name="username_enter">Username</string>
    <string name="password_enter">Password</string>
    <string name="finish">Finish</string>
    <string name="already_have_an_account_authorize">Already have an account? Authorize</string>
    <string name="authorize">Authorize</string>
    <string name="authorization">Authorization</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="tap_to_circle_to_drink_a_liquid">Tap to circle to drink a liquid</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="weight_error">Weight must be more than 0</string>
    <string name="password_accept">Password accept</string>
    <string name="passwords_are_not_equal">Passwords are not equal</string>
    <string name="pass_restricted_symbols_msg">Password or username contains restricted symbols</string>
    <string name="empty_fields_msg">All fields must be entered</string>
    <string name="success">Success</string>
    <string name="username_exist_msg">Username already exists</string>
    <string name="invalid_log_pass_msg">Invalid login or password</string>
    <string name="total_drank_summ">Total drank summ: "</string>
    <string name="days_complete">Days complete: "</string>
    <string name="last_drunk">Last drunk: </string>
    <string name="rememberme">RememberMe</string>
    <string name="dont_remeber_me">dont remeber me</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="_6_hours">6 HOURS</string>
    <string name="_2_hours">2 Hours</string>
    <string name="_8_hours">8 hours</string>
    <string name="_4_hours">4 hours</string>
    <string name="riached_prog_msg">You are riached your goal!</string>

    <!--Полезные советы-->

    <!--Еденицы измерения Убрал lb-->
    <string-array name="scaleType">
        <item>kg</item>
    </string-array>
</resources>
