<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Activities.LaunchActivities.RegAuthActivity">

    <TextView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/authorization"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:fontFamily="@font/regular"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="245dp"
        android:layout_height="116dp"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_transparent" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/logo"
        android:layout_marginTop="40dp"
        android:inputType="textPersonName"
        android:drawableEnd="@drawable/profile_icon"
        android:drawableTint="@color/textColorPrimary"
        android:fontFamily="@font/handwritten"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_selector_rounded"
        android:hint="@string/username_enter"
        android:padding="20dp"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:drawableEnd="@android:drawable/ic_lock_lock"
        android:drawableTint="@color/textColorPrimary"
        android:fontFamily="@font/handwritten"
        android:background="@drawable/button_selector_rounded"
        android:inputType="textPassword"
        android:hint="@string/password_enter"
        android:padding="20dp"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp" />

    <ToggleButton
        android:id="@+id/toggleButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/rememberme"
        android:textOff="@string/dont_remeber_me"
        android:textAllCaps="false"
        android:layout_below="@+id/passwordEditText"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/button_selector_rounded"
        android:fontFamily="@font/regular"
        android:padding="3dp"
        android:text="@string/authorize" />


    <Button
        android:id="@+id/nextButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggleButton"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="22dp"
        android:background="@drawable/button_selector_rounded"
        android:fontFamily="@font/regular"
        android:padding="20dp"
        android:text="@string/authorize" />

    <TextView
        android:id="@+id/createNewAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_edges"
        android:backgroundTint="@color/colorPrimaryLight"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/create_a_new_account"
        android:textSize="20dp" />




</RelativeLayout>