<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="onClick"
    tools:context=".Activities.LaunchActivities.SecondStepActivity">

    <TextView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:paddingLeft="10dp"
        android:text="@string/first_setup_title"
        android:textColor="@color/textColorPrimary"
        android:textSize="30dp"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:text="@string/step_2"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_selector_rounded"
        android:drawableEnd="@drawable/profile_icon"
        android:drawableTint="@color/textColorPrimary"
        android:fontFamily="@font/handwritten"
        android:hint="@string/username_enter"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_selector_rounded"
        android:drawableEnd="@android:drawable/ic_lock_lock"
        android:drawableTint="@color/textColorPrimary"
        android:fontFamily="@font/handwritten"
        android:hint="@string/password_enter"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/passwordAcceptEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/button_selector_rounded"
        android:drawableEnd="@android:drawable/ic_lock_lock"
        android:drawableTint="@color/textColorPrimary"
        android:fontFamily="@font/handwritten"
        android:hint="@string/password_accept"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp" />


    <Button
        android:id="@+id/nextButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordAcceptEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/button_selector_rounded"
        android:fontFamily="@font/regular"
        android:onClick="onClick"
        android:padding="20dp"
        android:text="@string/finish"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/alreadyHaveAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_edges"
        android:backgroundTint="@color/colorPrimaryLight"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/already_have_an_account_authorize"
        android:textSize="20dp" />
</RelativeLayout>