<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Activities.LaunchActivities.FirstStepActivity">

    <TextView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/first_setup_title"
        android:gravity="center"
        android:paddingStart="10dp"
        android:fontFamily="@font/regular"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp"
        android:background="@color/colorPrimaryDark"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:text="@string/step_1"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp" />

    <include layout="@layout/spinner_edit_text"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_below="@id/title"
        android:id="@+id/editTextWithSpinner"/>

    <TextView
        android:id="@+id/weight_description"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/nextButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/rounded_edges"
        android:fontFamily="@font/handwritten"
        android:padding="20dp"
        android:text="@string/weight_description"
        android:backgroundTint="@color/colorPrimaryLight"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp" />


    <Button
        android:id="@+id/nextButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:layout_below="@+id/editTextWithSpinner"
        android:textSize="20sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/button_selector_rounded"
        android:fontFamily="@font/regular"
        android:padding="20dp"
        android:text="@string/next_button" />
</RelativeLayout>